tests/compilation_error/for_loop_scope.ll
for i in 1 .. 10:
    pass
print i + " is undeclared here"
